module Teams
  class AchieveDoubleBronze < Infra::Command
    attribute :name, Infra::Types::Strict::String
  end
end
